{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 28,
  "lineage": "519a453a-41ff-6c6c-f448-d8aa0757ef72",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03044d1366d6b9f7d",
            "arn": "arn:aws:ec2:ca-central-1:017820679929:elastic-ip/eipalloc-03044d1366d6b9f7d",
            "association_id": "eipassoc-0d0360075906a356b",
            "domain": "vpc",
            "id": "eipalloc-03044d1366d6b9f7d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0aa66afb7d1281530",
            "private_dns": "ip-10-0-1-118.ca-central-1.compute.internal",
            "private_ip": "10.0.1.118",
            "public_dns": "ec2-15-157-120-107.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.120.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-ElasticIP",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-ElasticIP",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:internet-gateway/igw-050dea06618fe6c80",
            "id": "igw-050dea06618fe6c80",
            "owner_id": "017820679929",
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-InternetGateway",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-InternetGateway",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03044d1366d6b9f7d",
            "association_id": "eipassoc-0d0360075906a356b",
            "connectivity_type": "public",
            "id": "nat-0d18abdf6c524eae4",
            "network_interface_id": "eni-0aa66afb7d1281530",
            "private_ip": "10.0.1.118",
            "public_ip": "15.157.120.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-075d3b1506ba890b8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:route-table/rtb-020100c896ad0e08e",
            "id": "rtb-020100c896ad0e08e",
            "owner_id": "017820679929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d18abdf6c524eae4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-PrivateRouteTable",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-PrivateRouteTable",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:route-table/rtb-0d4c0c626eef5035b",
            "id": "rtb-0d4c0c626eef5035b",
            "owner_id": "017820679929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050dea06618fe6c80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-PublicRouteTable",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-PublicRouteTable",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a0568965dfc0103",
            "route_table_id": "rtb-020100c896ad0e08e",
            "subnet_id": "subnet-0a69a88ea5ce7dafa"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b743fc86e4c34e3d",
            "route_table_id": "rtb-0d4c0c626eef5035b",
            "subnet_id": "subnet-075d3b1506ba890b8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dynamodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:security-group/sg-08eca336c68c2577f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eca336c68c2577f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241003105512628300000002",
            "name_prefix": "terraform-",
            "owner_id": "017820679929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-DynamoDBEndpointSG",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-DynamoDBEndpointSG",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:subnet/subnet-0a69a88ea5ce7dafa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a69a88ea5ce7dafa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017820679929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-PrivateSubnet",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-PrivateSubnet",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:subnet/subnet-075d3b1506ba890b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d3b1506ba890b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "017820679929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-PublicSubnet",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-PublicSubnet",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:vpc/vpc-0ed1e1f73f9b0661e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096ddff4bef086351",
            "default_route_table_id": "rtb-0f94bb4c7b696aaf8",
            "default_security_group_id": "sg-04db4da2750e346ea",
            "dhcp_options_id": "dopt-0e1fbeb8891964f73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed1e1f73f9b0661e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f94bb4c7b696aaf8",
            "owner_id": "017820679929",
            "tags": {
              "Environment": "Development",
              "Name": "Audit-Infra-VPC",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Audit-Infra-VPC",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:017820679929:vpc-endpoint/vpce-0b4ae7b0af6f3eb12",
            "cidr_blocks": [
              "52.94.14.0/24",
              "35.71.119.0/24"
            ],
            "dns_entry": [
              {
                "dns_name": "vpce-0b4ae7b0af6f3eb12-vctnuh4a.dynamodb.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-0b4ae7b0af6f3eb12-vctnuh4a-ca-central-1a.dynamodb.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b4ae7b0af6f3eb12",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0251eff486a4ad66d"
            ],
            "owner_id": "017820679929",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-4ea54027",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08eca336c68c2577f"
            ],
            "service_name": "com.amazonaws.ca-central-1.dynamodb",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.237",
                "subnet_id": "subnet-0a69a88ea5ce7dafa"
              }
            ],
            "subnet_ids": [
              "subnet-0a69a88ea5ce7dafa"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "DynamoDBEndpoint",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "DynamoDBEndpoint",
              "Owner": "Anudeep",
              "Project": "Payment Gateway"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ed1e1f73f9b0661e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.dynamodb_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}